# natural-hallucinations-claude

./: .resource_finder_complete  README.md  REPORT.md  literature_review.md  planning.md  pyproject.toml  resources.md
.idea-explorer/: idea.yaml  pipeline_results.json  pipeline_state.json
.neurico/: idea.yaml  pipeline_results.json  pipeline_state.json
code/: README.md
datasets/: .gitignore  README.md
logs/: execution_claude_transcript.jsonl  paper_writer_prompt.txt  research_prompt.txt  resource_finder_prompt.txt  session_instructions.txt
paper_draft/: main.aux  main.bbl  main.blg  main.tex  neurips_2025.sty  references.bib
paper_draft/commands/: general.tex  macros.tex  math.tex
paper_draft/sections/: abstract.tex  conclusion.tex  discussion.tex  introduction.tex  methodology.tex  related_work.tex  results.tex
paper_search_results/: LLM_hallucination_robustness_natural_hallucinations_20260320_154200.jsonl
papers/: README.md  search_results_1.txt  search_results_2.txt  search_results_3.txt  search_results_4.txt  search_results_5.txt  search_results_6.txt
papers/pages/: 2109.07958_TruthfulQA_manifest.txt  2303.08896_selfcheckgpt_manifest.txt  2305.13534_hallucination_snowball_manifest.txt  2402.03744_INSIDE_manifest.txt
results/: all_results_summary.json  analysis.json  config.json  exp1_intermediate.json  exp1_results.json  exp2_results.json  exp3_results.json  exp4_results.json
results/cache/: gpt_3_5_turbo_0006679d2cb8f3e994b422f5dee57b6a.json  (+9717 more)
src/: analysis.py  experiment.py  run_exp1_parallel.py  run_exp234.py  visualizations.py
(+11 files in other folders)
